--- a/WebApp/Nancy3.csproj
+++ b/WebApp/Nancy3.csproj
@@ -23,6 +23,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.6" />
     <PackageReference Include="Nancy" Version="2.0.0-clinteastwood" />
+    <PackageReference Include="Nancy.Authentication.Forms" Version="2.0.0-clinteastwood" />
   </ItemGroup>
 
   <ItemGroup>
