--- a/src/App/js/package.json
+++ b/src/App/js/package.json
@@ -12,6 +12,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "es5-shim": "4.5.10",
+    "es6-shim": "0.35.3",
     "mithril": "1.1.6",
     "purecss": "1.0.0"
   },
