--- a/src/App/App.csproj
+++ b/src/App/App.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
     <TypeScriptToolsVersion>3.0</TypeScriptToolsVersion>
+    <UserSecretsId>4ef93650-7b0d-4014-99c9-e295aeab411d</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
