--- a/src/App/App.csproj
+++ b/src/App/App.csproj
@@ -37,4 +37,8 @@
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.3" />
   </ItemGroup>
 
+  <Target Name="PostBuild" AfterTargets="PostBuildEvent">
+    <Exec Command="cd js&#xD;&#xA;npm run build-$(ConfigurationName)" />
+  </Target>
+
 </Project>
