try to get unit tests working with ospec

--- a/src/App/App.csproj
+++ b/src/App/App.csproj
@@ -25,6 +25,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Remove="js\components\layout\tests\footer.spec.ts" />
     <None Remove="Views\index.html" />
   </ItemGroup>
 
@@ -42,6 +43,10 @@
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.1.6" />
     <PackageReference Include="Nancy" Version="2.0.0-clinteastwood" />
     <PackageReference Include="Nancy.Authentication.Forms" Version="2.0.0-clinteastwood" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <TypeScriptCompile Include="js\components\layout\tests\footer.spec.ts" />
   </ItemGroup>
 
   <Target Name="PostBuild" AfterTargets="PostBuildEvent" Condition="'$(DeployOnBuild)' != 'true'">
