--- a/src/App/js/package.json
+++ b/src/App/js/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "ospec",
     "build-Debug": "parcel build app.ts -d ../wwwroot/content --no-minify",
     "build-Release": "parcel build app.ts -d ../wwwroot/content --experimental-scope-hoisting --no-cache",
     "watch": "parcel watch app.ts -d ../wwwroot/content"
@@ -18,6 +18,7 @@
   },
   "devDependencies": {
     "@types/mithril": "1.1.13",
+    "glob": "7.1.3",
     "typescript": "3.1.6"
   }
 }
