move tsout folder one level to keep jest from finding it.

--- a/src/App/App.csproj
+++ b/src/App/App.csproj
@@ -19,9 +19,13 @@
 
   <ItemGroup>
     <Compile Remove="js\tsout\**" />
+    <Compile Remove="tsout\**" />
     <Content Remove="js\tsout\**" />
+    <Content Remove="tsout\**" />
     <EmbeddedResource Remove="js\tsout\**" />
+    <EmbeddedResource Remove="tsout\**" />
     <None Remove="js\tsout\**" />
+    <None Remove="tsout\**" />
   </ItemGroup>
 
   <ItemGroup>
