--- a/src/App/js/tsconfig.json
+++ b/src/App/js/tsconfig.json
@@ -4,6 +4,6 @@
     "module": "commonjs",
     "esModuleInterop": true,
     "sourceMap": true,
-    "outDir": "./tsout"
+    "outDir": "../tsout"
   }
 }
