fix resharper by allowing synthetic imports

--- a/src/App/js/tsconfig.json
+++ b/src/App/js/tsconfig.json
@@ -2,7 +2,8 @@
   "compilerOptions": {
     "target": "es5",
     "module": "commonjs",
-    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+    "esModuleInterop": false,
     "sourceMap": true,
     "outDir": "../tsout"
   }
