--- a/src/App/js/package.json
+++ b/src/App/js/package.json
@@ -21,6 +21,7 @@
     "@types/mithril": "1.1.13",
     "glob": "7.1.3",
     "jest": "23.6.0",
+    "mithril-query": "2.5.2",
     "ts-jest": "23.10.5",
     "typescript": "3.2.1"
   }
