--- a/src/App/js/tsconfig.json
+++ b/src/App/js/tsconfig.json
@@ -4,6 +4,7 @@
     "module": "commonjs",
     "allowSyntheticDefaultImports": true,
     "sourceMap": true,
-    "outDir": "../tsout"
+    "outDir": "../tsout",
+    "noImplicitAny": true
   }
 }
