--- a/src/App/App.csproj
+++ b/src/App/App.csproj
@@ -31,7 +31,7 @@
   <ItemGroup>
     <None Remove="js\app.ts" />
     <None Remove="js\components\grid\grid.ts" />
-    <None Remove="js\components\grid\IGridOptions.ts" />
+    <None Remove="js\components\grid\IGridModel.ts" />
     <None Remove="js\components\layout\footer.ts" />
     <None Remove="js\components\layout\header.ts" />
     <None Remove="js\components\layout\layout.ts" />
@@ -75,7 +75,7 @@
   <ItemGroup>
     <TypeScriptCompile Include="js\app.ts" />
     <TypeScriptCompile Include="js\components\grid\grid.ts" />
-    <TypeScriptCompile Include="js\components\grid\IGridOptions.ts" />
+    <TypeScriptCompile Include="js\components\grid\IGridModel.ts" />
     <TypeScriptCompile Include="js\components\layout\footer.ts" />
     <TypeScriptCompile Include="js\components\layout\header.ts" />
     <TypeScriptCompile Include="js\components\layout\layout.ts" />
