--- a/src/App/App.csproj
+++ b/src/App/App.csproj
@@ -31,6 +31,7 @@
   <ItemGroup>
     <None Remove="js\app.ts" />
     <None Remove="js\components\grid\grid.ts" />
+    <None Remove="js\components\grid\gridSort.ts" />
     <None Remove="js\components\grid\gridViewModel.ts" />
     <None Remove="js\components\grid\IGridModel.ts" />
     <None Remove="js\components\layout\footer.ts" />
@@ -76,6 +77,7 @@
   <ItemGroup>
     <TypeScriptCompile Include="js\app.ts" />
     <TypeScriptCompile Include="js\components\grid\grid.ts" />
+    <TypeScriptCompile Include="js\components\grid\gridSort.ts" />
     <TypeScriptCompile Include="js\components\grid\gridViewModel.ts" />
     <TypeScriptCompile Include="js\components\grid\IGridModel.ts" />
     <TypeScriptCompile Include="js\components\layout\footer.ts" />
