--- a/src/App/js/tsconfig.json
+++ b/src/App/js/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "target": "es5",
-    "module": "commonjs",
+    "module": "es2015",
     "allowSyntheticDefaultImports": true,
     "sourceMap": true,
     "outDir": "../tsout",
