--- a/src/App/js/package.json
+++ b/src/App/js/package.json
@@ -14,7 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "mithril": "2.0.0-rc.3",
-    "normalize.css": "8.0.1"
+    "purecss": "1.0.0"
   },
   "devDependencies": {
     "@types/jest": "23.3.10",
