--- a/src/App/App.csproj
+++ b/src/App/App.csproj
@@ -30,6 +30,7 @@
 
   <ItemGroup>
     <None Remove="js\app.ts" />
+    <None Remove="js\components\grid\grid-export-excel.ts" />
     <None Remove="js\components\grid\grid.ts" />
     <None Remove="js\components\grid\gridExportCsv.ts" />
     <None Remove="js\components\grid\gridSort.ts" />
@@ -55,7 +56,7 @@
     <None Remove="js\services\css-service.ts" />
     <None Remove="js\services\dialog-service.ts" />
     <None Remove="js\services\dom-service.ts" />
-    <None Remove="js\services\downloadService.ts" />
+    <None Remove="js\services\download-service.ts" />
     <None Remove="js\services\route-service.ts" />
     <None Remove="Views\index.html" />
   </ItemGroup>
@@ -80,6 +81,7 @@
     <TypeScriptCompile Include="js\app.ts" />
     <TypeScriptCompile Include="js\components\grid\grid.ts" />
     <TypeScriptCompile Include="js\components\grid\gridExportCsv.ts" />
+    <TypeScriptCompile Include="js\components\grid\grid-export-excel.ts" />
     <TypeScriptCompile Include="js\components\grid\gridSort.ts" />
     <TypeScriptCompile Include="js\components\grid\gridViewModel.ts" />
     <TypeScriptCompile Include="js\components\grid\IGridModel.ts" />
@@ -103,7 +105,7 @@
     <TypeScriptCompile Include="js\services\css-service.ts" />
     <TypeScriptCompile Include="js\services\dialog-service.ts" />
     <TypeScriptCompile Include="js\services\dom-service.ts" />
-    <TypeScriptCompile Include="js\services\downloadService.ts" />
+    <TypeScriptCompile Include="js\services\download-service.ts" />
     <TypeScriptCompile Include="js\services\route-service.ts" />
   </ItemGroup>
 
