--- a/src/App/js/package.json
+++ b/src/App/js/package.json
@@ -13,12 +13,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "mithril": "2.0.0-rc.3",
-    "mustard-ui": "0.0.8"
+    "mithril": "2.0.0-rc.3"
   },
   "devDependencies": {
     "@types/jest": "23.3.10",
     "@types/mithril": "1.1.13",
+    "bulma": "0.7.2",
     "glob": "7.1.3",
     "jest": "23.6.0",
     "mithril-query": "2.5.2",
