start in on filters

--- a/src/App/App.csproj
+++ b/src/App/App.csproj
@@ -29,8 +29,9 @@
 
   <ItemGroup>
     <None Remove="js\app.ts" />
-    <None Remove="js\components\grid\grid-interfaces.ts" />
+    <None Remove="js\components\grid\grid-filter.ts" />
     <None Remove="js\components\grid\grid-sort.ts" />
+    <None Remove="js\components\grid\grid-types.ts" />
     <None Remove="js\components\grid\grid-view-model.ts" />
     <None Remove="js\components\grid\grid.ts" />
     <None Remove="js\components\layout\footer.ts" />
@@ -80,10 +81,11 @@
 
   <ItemGroup>
     <TypeScriptCompile Include="js\app.ts" />
+    <TypeScriptCompile Include="js\components\grid\grid-filter.ts" />
     <TypeScriptCompile Include="js\components\grid\grid.ts" />
     <TypeScriptCompile Include="js\components\grid\grid-sort.ts" />
     <TypeScriptCompile Include="js\components\grid\grid-view-model.ts" />
-    <TypeScriptCompile Include="js\components\grid\grid-interfaces.ts" />
+    <TypeScriptCompile Include="js\components\grid\grid-types.ts" />
     <TypeScriptCompile Include="js\components\layout\footer.ts" />
     <TypeScriptCompile Include="js\components\layout\header.ts" />
     <TypeScriptCompile Include="js\components\layout\layout.ts" />
