add filters, tests, case insensitive compare

--- a/src/App/App.csproj
+++ b/src/App/App.csproj
@@ -34,6 +34,7 @@
     <None Remove="js\components\grid\grid-types.ts" />
     <None Remove="js\components\grid\grid-view-model.ts" />
     <None Remove="js\components\grid\grid.ts" />
+    <None Remove="js\components\grid\tests\grid-filter.spec.ts" />
     <None Remove="js\components\layout\footer.ts" />
     <None Remove="js\components\layout\header.ts" />
     <None Remove="js\components\layout\layout.ts" />
@@ -86,6 +87,7 @@
     <TypeScriptCompile Include="js\components\grid\grid-sort.ts" />
     <TypeScriptCompile Include="js\components\grid\grid-view-model.ts" />
     <TypeScriptCompile Include="js\components\grid\grid-types.ts" />
+    <TypeScriptCompile Include="js\components\grid\tests\grid-filter.spec.ts" />
     <TypeScriptCompile Include="js\components\layout\footer.ts" />
     <TypeScriptCompile Include="js\components\layout\header.ts" />
     <TypeScriptCompile Include="js\components\layout\layout.ts" />
