--- a/src/App/js/package.json
+++ b/src/App/js/package.json
@@ -19,7 +19,7 @@
     "@types/mithril": "1.1.14",
     "bulma": "0.7.2",
     "glob": "7.1.3",
-    "jest": "23.6.0",
+    "jest": "^24.0.0",
     "mithril": "2.0.0-rc.3",
     "mithril-query": "2.5.2",
     "parcel-bundler": "1.11.0",
