--- a/src/App/js/package.json
+++ b/src/App/js/package.json
@@ -5,26 +5,27 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "build-Debug": "npx parcel build app.ts -d ../wwwroot/content --no-minify",
-    "build-Release": "npx parcel build app.ts -d ../wwwroot/content --no-cache --no-source-maps",
-    "build-debug": "npx parcel build app.ts -d ../wwwroot/content --no-minify",
-    "build-release": "npx parcel build app.ts -d ../wwwroot/content --no-cache --no-source-maps",
-    "watch": "npx parcel watch app.ts -d ../wwwroot/content"
+    "build-Debug": "npx webpack --config webpack.config.js --mode=development",
+    "build-Release": "npx webpack --config webpack.config.js --mode=production",
+    "build-debug": "npm run build-Debug",
+    "build-release": "npm run build-Release",
+    "watch": ""
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/jest": "23.3.13",
-    "@types/mithril": "1.1.14",
-    "bulma": "0.7.2",
-    "glob": "7.1.3",
+    "@types/jest": "^23.3.13",
+    "@types/mithril": "^1.1.14",
+    "bulma": "^0.7.2",
+    "glob": "^7.1.3",
     "jest": "^24.0.0",
-    "mithril": "2.0.0-rc.3",
-    "mithril-query": "2.5.2",
-    "parcel-bundler": "1.11.0",
-    "sass": "1.16.1",
-    "ts-jest": "23.10.5",
-    "typescript": "3.2.4"
+    "mithril": "^2.0.0-rc.3",
+    "mithril-query": "^2.5.2",
+    "ts-jest": "^23.10.5",
+    "ts-loader": "^5.3.3",
+    "typescript": "^3.2.4",
+    "webpack": "^4.29.0",
+    "webpack-cli": "^3.2.1"
   }
 }
